[package]
name = "bronze"
version = "0.1.0"
authors = ["Jeremy Zheng <jitang.zheng@gmail.com>"]
edition = "2018"
description = "A bronze library."
homepage = "https://github.com/saturn-xiv/bronze"
license = "MIT"
readme = "README.md"

[profile.release]
lto = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mime = "0.3"
log = "0.4"
env_logger = "0.8"
askama = "0.10"
validator = "0.12"
validator_derive = "0.12"
serde = "1"
serde_derive = "1"
serde_json = "1"
actix-web = "3"
clap = "3.0.0-beta.2"
